--- a/about-us.html
+++ b/about-us.html
@@ -246,7 +246,7 @@
                 </div>
                 <div class="quote-corporate">
                   <div class="quote-header">
-                    <h4>Omoh</h4>
+                    <h4>Preye</h4>
                     <p class="big">Client</p>
                   </div>
                   <div class="quote-body">
