--- a/about-us.html
+++ b/about-us.html
@@ -108,8 +108,8 @@
               <div class="block-xs">
                 <h2>Who We Are</h2>
                 <div class="divider-lg"></div>
-                <p class="big text-gray-800">Cras ut vestibulum tortor. In in nisi sit amet metus varius pulvinar in vitae ipsum nec mi sollicitudin Fusce turpis massa,</p>
-                <p>In ante sapien, dapibus luctus aliquet a, accumsan sit amet dolor. Mauris id facilisis dolor. Donec malesuada, est eu dignissim eleifend, est nulla dignissim nisl. Fusce turpis massa, mattis sit.</p>
+                <p class="big text-gray-800"></p>
+                <p>Beauty Salon deals and specializes on facial makeup, fixing and dying</p>
               </div>
               <div class="row row-30">
                 <div class="col-md-6">
